bad/return_null_in_func_returning_void.example_compiler_output
ERROR
[1mbad/return_null_in_func_returning_void.lat:3:22: [1;31merror: [0;1mreturned value of type `null` is not convertible to return type `void`[m
void test() { return null; }
                     [1;32m^[m
